--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "babel-plugin-espower": "^1.1.0",
     "babel-runtime": "^5.8.29",
     "bluebird": "^3.0.0",
+    "call-signature": "0.0.1",
     "chalk": "^1.0.0",
     "co-with-promise": "^4.6.0",
     "core-assert": "^0.1.0",
